fixes canvas bg in dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -213,6 +213,7 @@ p {
 }
 
 #canvas{
+  background: white;
   background-image: linear-gradient(45deg, transparent 49.5%, rgba(0, 0, 0, 0.2) 50%, transparent 50.5%, transparent 100%),
   linear-gradient(-45deg, transparent 49.5%, rgba(0, 0, 0, 0.2) 50%, transparent 50.5%, transparent 100%),
   linear-gradient(0deg, transparent 49.5%, rgba(0, 0, 0, 0.2) 50%, transparent 50.5%, transparent 100%),
